@@ -1,5 +1,10 @@
 2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/CFCalendar.c: Implemented a few more functions.
+	* Source/CFString.c: Fixed bug in CFStringPad().
+
+2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/CFString.c: Fixed string hashing and implemented
 	CFStringGetRangeOfComposedCharactersAtIndex().
 
